Fix the code Generation and add the Division By Zero